2008-12-12  Jun Kuriyama <kuriyama@freebsd.org>, Göran Löwkran
	* changer-src/chg-zd-mtx.sh: fix bashisms
	* client-src/sendbackup-dump.c: use -L on systems that support it

2008-12-11  Jean-Louis Martineau <martineau@zmanda.com>
	* NEWS, ReleaseNotes: Add amsamba.

2008-12-11  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Check start_t before doing a dump to tape.

2008-12-09  C R Ritson.
	* server-src/reporter.c: Add threshold to small and big estimate.

2008-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/client_util.c: Parse RECOVER-MODE application support.
	* client-src/client_util.h (backup_support_option_t):
	                           Add smb_recover_mode.
	* client-src/sendsize.c: Fix size.
	* man/Makefile.am: Add amsamba.8.
	* man/xml-source/amsamba.8.xml: New man page.
	* man/xml-source/amanda-applications.7.xml: List amsamba.
	* man/xml-source/amanda.8.xml: List amsamba.
	* application-src/Makefile.am (CHECK_PERL): Add amsamba
	* application-src/amsamba.pl: New application.
	* recover-src/extract_list.c: Get support option from application
	  and set --recover-mode if needed.
	* recover-src/amrecover.h: Remove some "#ifdef SAMBA_CLIENT".
	* recover-src/set_commands.c: Remove some "#ifdef SAMBA_CLIENT".
	* perl/Amanda/Paths.pm.in: Add $sysconfdir.
	* perl/Amanda/Util.swg: Add skip_quoted_string.

2008-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amstar.8.xml: Typo.

2008-12-09  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda.conf.5.xml: Fix plugin location.

2008-12-07  Dustin J. Mitchell <dustin@zmanda.com>
	* server-src/Makefile.am server-src/amvault.pl: new, experimental
	  script to copy data from secondary to tertiary volumes
	* common-src/fileheader.c: strip spurious ' ' from headers
	* man/Makefile.am man/xml-source/amvault.8.xml: docs
	* perl/Amanda/DB/Catalog.pm: add kbps calculation
	* perl/Amanda/Device.swg: add volume_header() method
