@@ -1,3 +1,7 @@
+2008-12-12  Jean-Louis Martineau <martineau@zmanda.com>
+	* recover-src/extract_list.c: Wait to read at least one byte from the
+				      data stream before forking the child.
+
 2008-12-12  Jun Kuriyama <kuriyama@freebsd.org>, Göran Löwkran
 	* changer-src/chg-zd-mtx.sh: fix bashisms
 	* client-src/sendbackup-dump.c: use -L on systems that support it
